# video-meme

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
video_meme/: file_manipulation.py  main.py  transcription.py  video_manipulation.py
